--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,7 +62,7 @@
 
   <header>
     <h1>Georges MOMO</h1>
-    <h2>Ingénieur DevOps</h2>
+    <h2>Ingénieur DevOps - IA - Cloud</h2>
     <p>Email : georges.momo@example.com | Téléphone : +33 6 12 34 56 78 | LinkedIn : linkedin.com/in/georgesmomo</p>
   </header>
 
